Mon Jul 10 09:15:25 EDT 2006 / Charles Lepple <clepple@gmail.com>

 - solis.c: add internal and external shutdown programming, save external
   shutdown programming to ups, support new cables and Solaris compilation

   (Silvino B. Magalhaes)

 - rhino.c: New driver for Microsol Rhino

   (Silvino B. Magalhaes)

 - drivers (svn:ignore): added rhino; sorted list of driver binaries (so that
   they are ignored during SVN checkins)

   (Charles Lepple)

Mon Jul 10 07:00:56 UTC 2006 / Arnaud Quette <aquette.dev@gmail.com>

 - powercom.c: rename shutdown() to nut_shutdown() to avoid naming
   conflict on LynxOS

   (Olli Savia) [Alioth Bug #303257]

 - energizerups: fix communication problems for Linux 2.6.15

   (Viktor T. Toth) [Alioth Bug #303393]

 - upsset: assumes stdin closed when called non-POST

   (Julius Malkiewicz) [Alioth Bug #302734]

 - config.sub, config.guess: update with automake-1.9 files

   (Charles Lepple) [Alioth Bug #302339]

 - driver.list: add Cyberpower 550SL supported by genericups upstype=7

   (Thomas Suckow) [Alioth Bug #302851]

 - apcsmart.8: add a comment to make a power cycle when switching
   from USB to serial (and perhaps vice versa) communication
   (from Ryan Underwood)

 - apcsmart: add support for the Smart-UPS with 6TI firmware and
   bump driver version to 1.99.8

   (Andrew Day) [Alioth Bug #303390]

Fri Jul 07 14:45:56 UTC 2006 / Arnaud Quette <aquette.dev@gmail.com>

 - mge-hid:
   * add battery.charge.restart, battery.type
   * fix ups.beeper.status, and add beeper.{on,off} commands
   * fix outlet.X.delay.{shutdown,start} and add temporary
     commands (to be discussed) outlet.X.load.{on,off}. This
     last would better be addressed through parameters of the
     load.{on,off} command.

Thu Jul  06 10:22:56 EDT 2006 / Charles Lepple <clepple@gmail.com>

 - clients/upssched.c: Added additional exec() status information to
   exec_cmd().

Wed Jul 05 10:32:30 UTC 2006 / Arnaud Quette <aquette.dev@gmail.com>
