@@ -52,8 +52,9 @@
 #define CMD_DUMP    0xCD
 
 /* comment on english language */
-#define PORTUGUESE
+/* #define PORTUGUESE */
 
+/* The following Portuguese strings are in UTF-8. */
 #ifdef PORTUGUESE
 #define M_UNKN     "Modêlo solis desconhecido\n"
 #define NO_SOLIS   "Solis não detectado! abortando ...\n"
