@@ -1,3 +1,9 @@
+Mon Jul 10 09:34:19 EDT 2006 / Charles Lepple <clepple@gmail.com>
+
+ - solis.c, rhino.c: Set default language back to English. This is a separate
+   commit so that you can easily revert this changeset and go back to
+   Portuguese messages.
+
 Mon Jul 10 09:15:25 EDT 2006 / Charles Lepple <clepple@gmail.com>
 
  - solis.c: add internal and external shutdown programming, save external
